match background css with thetatoken.org

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,17 +1,55 @@
-html {
+html, body {
   height: 100%;
-  width: 100%;
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  height: 100%;
-  padding: 0;
-  overflow: auto;
-  margin: 0;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  overflow: hidden;
+  color: white;
+  background: #1b1f2a;
+  font-family: "AlwynNew", sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+body:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("/public/images/center-glow.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  pointer-events: none;
+  z-index: -1;
+}
+#root:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("/public/images/red-glow-top-right.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top right;
+  pointer-events: none;
+  z-index: -1;
+}
+.theta-container:before{
+  content: '';
+  position: absolute;
+  top: calc(63px - 180px);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("/public/images/grid_transparent_tile.png");
+  background-size: 180px;
+  background-repeat: repeat;
+  background-position: top right;
+  pointer-events: none;
+  z-index: -1;
 }
