--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,4 +2,6 @@
 @import './styles/global.scss';
 
 // core - theta
-@import './styles/_variables.scss'
+@import './styles/_variables.scss';
+
+// @import '~bootstrap/scss/bootstrap.scss';
