add range check for block explorer page
Only added fronend client-side check, need to add backend/database check later

--- a/frontend/src/common/components/link-button/styles.scss
+++ b/frontend/src/common/components/link-button/styles.scss
@@ -1,9 +1,9 @@
 @import 'styles/_variables.scss';
-$line-height: 40px;
+$button-line-height: 40px;
 
 .th-link-button{
   text-decoration: none;
-  height: $line-height;
+  height: $button-line-height;
   width: 83px;
   display: flex;
 
