--- a/frontend/src/features/dashboard/styles.scss
+++ b/frontend/src/features/dashboard/styles.scss
@@ -1,11 +1,25 @@
 .th-blocks-overview{
   &__title{
-    width: 45%;
+    width: 95%;
     text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
   }
   &__button{
     width: 90px;
     margin-top: 10px;
     display: flex;
+  }
+}
+
+.th-dashboard{
+  &__title{
+    margin: 20px 0;
+    text-align: center;
+    font-size: 32px;
+  }
+  &__container{
+    display: flex;
+    justify-content: space-between;
   }
 }
