--- a/frontend/src/features/blocks/styles.scss
+++ b/frontend/src/features/blocks/styles.scss
@@ -70,6 +70,9 @@ $line-height: 50px;
     text-align: center;
     padding: 5px;
   }
+  & table{
+    width: 100%;
+  }
   &.full{
     width: 80%;
     margin-left: 10%;
