--- a/frontend/src/features/blocks/styles.scss
+++ b/frontend/src/features/blocks/styles.scss
@@ -34,6 +34,9 @@ $line-height: 50px;
   width: 110px !important;
 }
 .th-block-explorer{
+  height: 100%;
+  width: 100%;
+
   &__title{
     margin: 30px 0 20px 20%;
     width: 60%;
@@ -89,6 +92,9 @@ $line-height: 50px;
       height: 40px;
     }
   }
+}
+.th-blocks{
+  width: 100%;
 }
 .th-blocks-title{
   width: 80%;
