--- a/frontend/src/common/components/header/styles.scss
+++ b/frontend/src/common/components/header/styles.scss
@@ -60,8 +60,9 @@
     color: $th-body;
 
     &--input{
-      height: 30px;
-      font-size: 1rem;
+      height: 20px;
+      font-size: 15px;
+      width: 150px;
       line-height: 1.5;
       border: 1px solid $th-blue;
       border-radius: .25rem 0 0 .25rem;
@@ -70,7 +71,7 @@
 
     &--select{
       position: relative;
-      width: 150px;
+      width: 125px;
       margin: 0 10px;
 
       &::after {
@@ -81,34 +82,35 @@
         border-right: 5px solid transparent;
         border-top: 6px solid $th-blue;
         position: absolute;
-        right: 8px;
-        top: 18px;
+        right: 5px;
+        top: 12px;
         pointer-events: none;
       }
 
       & select{
-        height: 42px;
+        height: 32px;
         width: 100%;
-        font-size: 1rem;
+        font-size: 15px;
+        font-family: "AlwynNew", sans-serif;
         padding: 5px 10px;
         display: inline-block;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
         border: 1px solid $th-blue;
-        border-radius: 0;
+        border-radius: 0 0.25rem 0.25rem 0;
         color: $th-body;
       }
     }
 
     &--button{
-      height: 42px;
-      width: 32px;
-      border-radius: 0 .25rem .25rem 0;
+      height: 30px;
+      width: 20px;
+      border-radius: 0.25rem .25rem .25rem 0.25rem;
       display: flex;
       align-items: center;
       cursor: pointer;
-      @include linearVerticalGradient($th-blue, $th-green);
+      // @include linearVerticalGradient($th-blue, $th-green);
 
       &:hover{
         @include linearVerticalGradient($th-blue, $th-green);
