Move explorer related CSS code to a separate file

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 // application 
 @import './styles/global.scss';
+@import './styles/explorer.scss';
 
 // core - theta
 @import './styles/_variables.scss';
