--- a/frontend/src/styles/explorer.scss
+++ b/frontend/src/styles/explorer.scss
@@ -12,10 +12,12 @@ $line-height: 50px;
     margin: 30px 0 20px 20%;
     width: 60%;
     height: 40px;
-    line-height: 40px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     span{
       font-size: 20px;
+      text-align: center;
     }
   }
   &__buttons{
