Show more data on account page
Need to revise later

--- a/frontend/src/styles/explorer.scss
+++ b/frontend/src/styles/explorer.scss
@@ -35,7 +35,7 @@ $line-height: 50px;
 // Theta explorer table related CSS styles
 .th-explorer-table-text{
   margin: 0;
-  word-break: break-all;
+  word-break: break-word;
   text-align: center;
   display: flex;
   justify-content: center;
