Minor UI changes

--- a/frontend/src/common/components/not-exist/styles.scss
+++ b/frontend/src/common/components/not-exist/styles.scss
@@ -2,6 +2,8 @@
 
 .th-not-exist{
     height: calc(70% - 90px);
+    width: 80%;
+    margin-left: 10%;
     text-align: center;
     font-size: 40px;
     color: $th-grey;
