--- a/frontend/src/styles/overview.scss
+++ b/frontend/src/styles/overview.scss
@@ -1,11 +1,13 @@
 .th-overview{
     min-width: 45%;
+    margin-top: 40px;
     margin-bottom: 30px;
     &__title{
       width: 100%;
       text-align: center;
       font-size: 20px;
-      margin-bottom: 10px;
+      margin-top: 5%;
+      margin-bottom: 30px;
     }
     &__button{
       width: 90px;
@@ -27,8 +29,8 @@
     width: 100%;
   }
   &.full{
-    width: 60%;
-    margin-left: 20%;
+    width: 80%;
+    margin-left: 10%;
     & table, th, td{
       border: 2px solid $th-blue;
       border-collapse: collapse;
