changed compilation of stylesheets to create external file. Webpack is too wonky handling this, so added gulp. Added hot reloading through gulp. Styleshets no longer require imports

--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -1,3 +1,24 @@
+$color-white: #fff;
+$color-theta-green: #21edba;
+$color-theta-blue: #33ccff;
+
+$color-font-main: #ffffff;
+$color-font-sub: #ffffff;
+$color-font-highlight: $color-theta-green;
+
+$color-font-title: $color-font-main;
+$color-font-body: $color-font-sub;
+
+$color-select-back: $color-font-highlight;
+$color-select-type: $color-font-main;
+
+
+
+
+
+
+
+
 
 $th-body: #1b1f2a;
 
@@ -42,6 +63,12 @@ $th-input-text: white;
 
 $th-overlay: rgba(27, 31, 42, 0.95);
 $th-modal-background: rgba(27, 31, 42, 1.0);
+
+
+
+
+
+
 
 //Gradient helpers
 
