--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -1,4 +1,3 @@
-@import 'styles/_variables.scss';
 
 .theta-header{
   height: 60px;
@@ -121,7 +120,7 @@
 .theta-logo{
   height: 25px;
   width: 90px;
-  background: url("/public/images/nav-logo.png");
+  background: url("/images/nav-logo.png");
   background-size: 90px 25px;
   margin-top: 17px;
 }
