--- a/frontend/src/styles/modules/_global.scss
+++ b/frontend/src/styles/modules/_global.scss
@@ -1,4 +1,3 @@
-@import 'styles/_variables.scss';
 
 html, body {
   height: 100%;
@@ -21,7 +20,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("/public/images/center-glow.png");
+    background: url("/images/center-glow.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -29,6 +28,11 @@ body {
     z-index: -1;
   }
 }
+
+body {
+  
+}
+
 .theta-app{
   height: 100%;
 }
@@ -40,7 +44,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("/public/images/red-glow-top-right.png");
+    background: url("/images/red-glow-top-right.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top right;
@@ -58,10 +62,6 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("/public/images/grid_transparent_tile.png");
-    background-size: 180px;
-    background-repeat: repeat;
-    background-position: top right;
     pointer-events: none;
     z-index: -1;
   }
