Moved stylesheets from JS folders into the styles folder and added to master import on styles.scss

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -11,3 +11,5 @@
 // SECTIONS 
 @import 'sections/explorer';
 @import 'sections/overview';
+@import 'sections/dashboard';
+@import 'sections/transactions';
