--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -751,3 +751,28 @@ body {
 
 .th-overview-th__right {
   width: 80%; }
+
+.th-dashboard {
+  width: 100%; }
+  .th-dashboard__title {
+    margin: 20px 0;
+    text-align: center;
+    font-size: 32px; }
+  .th-dashboard__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+
+.th-tx-text__split {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
